--- a/pom.tmpl
+++ b/pom.tmpl
@@ -30,7 +30,7 @@ For any inquiry or need additional information, please contact support-qaf@infos
 	<version>${ivy.pom.version}</version>
 	<name>QMetry Automation Framework angular support</name>
 	<url>https://github.com/qmetry/qaf-support-angular</url>
-	<description>qaf elasticsearch integration</description>
+	<description>qaf angular web support</description>
 	<scm>
 		<connection>scm:git:git://github.com/qmetry/qaf-support-angular.git</connection>
 		<developerConnection>scm:git:git@github.com:qmetry/qaf-support-angular.git</developerConnection>
